   floating point rounding mode is set; it also allows for the caching
   of Java classes and field/method IDs, thereby reducing the overhead
   of native method callbacks.

o  The C and Java interfaces now support timeout computation facilities.

o  New configuration option `--with-gmp-build=DIR' allows to use a
   non-installed build of GMP in DIR.


Deprecated and removed methods
------------------------------

o  All methods having a name ending in `_and_minimize' (e.g.,
   add_constraints_and_minimize, poly_hull_assign_and_minimize, ...)
   have been removed (they were deprecated in version 0.10).


Bugfixes
========

o  Corrected a bug in maximize and mininimize optimization methods of
   class template Pointset_Powerset, whereby the Boolean value true
   (indicating successful optimization) was returned for empty powersets.

o  Corrected a bug in method
     bool NNC_Polyhedron::poly_hull_assign_if_exact(const NNC_Polyhedron&);
   whereby some inexact NNC hulls were incorrectly flagged as exact.


--------------------------------------------------------------------------
NEWS for version 0.10.2  (released on April 18, 2009)
--------------------------------------------------------------------------

Bugfixes
========

o  Correctly detect GMP 4.3.0.

o  Fixed the C interface library version information.

o  Test program tests/Polyhedron/memory1 disabled on the zSeries s390x
   platform.

o  Makefiles fixed so as to avoid failure of `make -n check'.


--------------------------------------------------------------------------
NEWS for version 0.10.1  (released on April 14, 2009)
--------------------------------------------------------------------------

New and Changed Features
========================

o  Added support for cross compilation.

o  The configuration script now explicitly checks that a recent enough
   version of GNU M4 is available if at least one non-C++ interface is
   enabled (in previous versions this check was not performed and